# csiro

./: .gitignore  README.md  data.md  main.py  pyproject.toml
.github/: copilot-instructions.md
docs/memo/: idea.md  memo.md
docs/original/: data_ja.md  overview.md  overview_ja.md
docs/original/Estimating Pasture Biomass Dataset/: main.bbl  main.tex
docs/original/html/: overview.html
other/: Lightning for Start Naive CNN Inferring.ipynb  readme.md
other/Aic/: CSIRO Best Baseline.ipynb  readme.md
other/Chirag_Desai/: readme.md
other/Jirka_Borovec/: readme.md
other/Mahou_Lettuce/: LB 0.57 Lightning for Start CNN Infer.ipynb  readme.md
other/Manoj/: CSIRO Image2Biomass LB 59.ipynb  LB 0.57 Infer Model Code.ipynb  readme.md
other/Taimo/: CSIRO Training Inference Baseline.ipynb  readme.md
scripts/data_process/compress/: compress.py
utils/path_utils/: path_all.py  pj_root.py
visualize/: data_check.ipynb
